<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idFirstAll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/idFirstInfo"
        android:layout_width="334dp"
        android:layout_height="141dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:autoSizeTextType="uniform"
        android:text="@string/str_weolcome"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFirstBackground" />

    <Button
        android:id="@+id/idFirstStart"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="120dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/style_button"
        android:contentDescription="@string/str_start"
        android:scaleType="fitCenter"
        android:text="@string/str_start"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFirstInfo" />

    <ImageView
        android:id="@+id/idFirstBackground"
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.5"
        android:contentDescription="@string/str_firstbackbround"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/id_icon" />

    <TextView
        android:id="@+id/idFirstTitle"
        android:layout_width="214dp"
        android:layout_height="85dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="120dp"
        android:autoSizeTextType="uniform"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Switch
        android:id="@+id/idFirstSwitch"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:autoSizeTextType="uniform"
        android:enabled="true"
        android:showText="false"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/str_music_background"
        android:textAlignment="textStart"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFirstStart"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/idFirstPrivacy"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:autoSizeTextType="uniform"
        android:text="@string/str_privacy_label"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idFirstStart" />

</androidx.constraintlayout.widget.ConstraintLayout>