<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idOptionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionFragment">


        <Button
            android:id="@+id/idOptionShare"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="340dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/style_button"
            android:text="@string/str_share"
            android:textAlignment="center"
            app:icon="@drawable/id_svg_share"
            app:iconGravity="start"
            app:iconSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/idOptionSwitchMusic"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:autoSizeTextType="uniform"
            android:text="@string/str_music_background"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/idOptionSwitchSound"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="30dp"
            android:autoSizeTextType="uniform"
            android:text="@string/str_sound"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/idOptionDonate"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="30dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/style_button"
            android:text="@string/str_donate"
            android:textAlignment="center"
            app:icon="@drawable/id_svg_donate"
            app:iconGravity="start"
            app:iconSize="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/idOptionDonateText"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="200dp"
            android:autoSizeTextType="uniform"
            android:autofillHints="@string/str_donate_no"
            android:ems="10"
            android:enabled="true"
            android:inputType="textPersonName"
            android:singleLine="false"
            android:textAlignment="textStart"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/idOptionDonateLabel"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:autoSizeTextType="uniform"
            android:text="@string/str_donate_no"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/idOptionDonateText"
            app:layout_constraintEnd_toEndOf="@+id/idOptionDonateText"
            app:layout_constraintStart_toStartOf="@+id/idOptionDonateText" />

        <Button
            android:id="@+id/idOptionDonateInput"
            android:layout_width="76dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/style_button"
            android:text="@string/str_yes"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idOptionDonateText" />

</androidx.constraintlayout.widget.ConstraintLayout>